changes covered for extractor service regarding reflection api , locking , PwC PR feedback , SFTP implementation